--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: Max Voitko
 email: max.voitko@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Max Voitko blog about his life
-
+theme: minima
 # social links
 twitter_username: mvoitko # DO NOT include the @ character, or else the build will fail!
 github_username:  mvoitko # DO NOT include the @ character, or else the build will fail!
